--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
                             </svg>
                         </div>
                         <div class="facebook d-flex justify-content-center align-items-center">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#fff" class="bi bi-facebook" viewBox="0 0 16 16">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#fff
+                            " class="bi bi-facebook" viewBox="0 0 16 16">
                                 <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
                             </svg>
                         </div>
@@ -990,9 +991,7 @@
                             </svg>
                             <h6 class="text-primary mb-1">Vaca</h6>
                             <div class="mb-1">26</div>
-                            <a href="https://wa.me/484129408671">
-                                <span class="badge badge-success px-4">Disponible</span>
-                            </a>
+                            <div>Kevin Rivas</div>
                         </div>
                     </div>
                 </div>
@@ -1163,9 +1162,7 @@
                             </svg>
                             <h6 class="text-primary mb-1">Lapa</h6>
                             <div class="mb-1">31</div>
-                            <a href="https://wa.me/484129408671">
-                                <span class="badge badge-success px-4">Disponible</span>
-                            </a>
+                            <div>Gabriel Lecointere</div>
                         </div>
                     </div>
                 </div>
@@ -1276,9 +1273,7 @@
                             </svg>
                             <h6 class="text-primary mb-1">Venado</h6>
                             <div class="mb-1">34</div>
-                            <a href="https://wa.me/484129408671">
-                                <span class="badge badge-success px-4">Disponible</span>
-                            </a>
+                            <div>Kevin Rivas</div>
                         </div>
                     </div>
                 </div>
