--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
                             </svg>
                             <h6 class="text-primary mb-1">Gato</h6>
                             <div class="mb-1">11</div>
-                            <div class="text-truncate text-center">Maithe Arocha</div>
+                            <div class="text-truncate">Maithe Arocha</div>
                         </div>
                     </div>
                 </div>
@@ -485,7 +485,7 @@
                             </svg>
                             <h6 class="text-primary mb-1">Caballo</h6>
                             <div class="mb-1">12</div>
-                            <a class="badge badge-success" href="https://wa.me/584129408671?text=El%20n%C3%BAmero%2012%20animal%20%22Caballo%22">Disponible</a>
+                            <div class="text-truncate">Rowens Ortega</div>
                         </div>
                     </div>
                 </div>
