apartar numero 06 rana

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                     </div>
                 </div>
                 <div class="col-4 col-lg-2">
-                    <div class="card-general mb-3">
+                    <div class="card-general card-general-taken mb-3">
                         <div class="p-2 text-center">
                             <svg class="mb-2" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M24 46.0684C37.2548 46.0684 48 42.2259 48 37.4859C48 32.7459 37.2548 28.9033 24 28.9033C10.7452 28.9033 0 32.7459 0 37.4859C0 42.2259 10.7452 46.0684 24 46.0684Z" fill="#33AA55"/>
@@ -308,7 +308,7 @@
                             </svg>
                             <h6 class="text-primary mb-1">Rana</h6>
                             <div class="mb-1">06</div>
-                            <a class="badge badge-success" href="https://wa.me/584129408671?text=El%20n%C3%BAmero%2006%20animal%20%22Rana%22">Disponible</a>
+                            <div>Renny Lecointere</div>
                         </div>
                     </div>
                 </div>
