--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
                             </svg>
                             <h6 class="text-primary mb-1">Oso</h6>
                             <div class="mb-1">16</div>
-                            <a class="badge badge-success" href="https://wa.me/584129408671?text=El%20n%C3%BAmero%2016%20animal%20%22Oso%22">Disponible</a>
+                            <div>Carlos Landaeta</div>
                         </div>
                     </div>
                 </div>
@@ -870,7 +870,7 @@
                             </svg>
                             <h6 class="text-primary mb-1">Cebra</h6>
                             <div class="mb-1">23</div>
-                            <a class="badge badge-success" href="https://wa.me/584129408671?text=El%20n%C3%BAmero%2023%20animal%20%22Cebra%22">Disponible</a>
+                            <div>Carlos Landaeta</div>
                         </div>
                     </div>
                 </div>
