agregar el tigre n 10

--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@
                     </div>
                 </div>
                 <div class="col-4 col-lg-2">
-                    <div class="card-general  mb-3">
+                    <div class="card-general card-general-taken mb-3">
                         <div class="p-2 text-center">
                             <svg class="mb-2" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g clip-path="url(#clip0)">
@@ -785,7 +785,7 @@
                             </svg>
                             <h6 class="text-primary mb-1">Gallo</h6>
                             <div class="mb-1">21</div>
-                            <a class="badge badge-success" href="https://wa.me/584129408671?text=El%20n%C3%BAmero%2021%20animal%20%22Gallo%22">Disponible</a>
+                            <div>Carlos Landaeta</div>
                         </div>
                     </div>
                 </div>
