--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                     </div>
                 </div>
                 <div class="col-4 col-lg-2">
-                    <div class="card-general mb-3">
+                    <div class="card-general card-general-taken mb-3">
                         <div class="p-2 text-center">
                             <svg class="mb-2"width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g clip-path="url(#clip0)">
@@ -424,7 +424,7 @@
                             </svg>
                             <h6 class="text-primary mb-1">Tigre</h6>
                             <div class="mb-1">10</div>
-                            <a class="badge badge-success" href="https://wa.me/584129408671?text=El%20n%C3%BAmero%2010%20animal%20%22Tigre%22">Disponible</a>
+                            <div>Carlos Landaeta</div>
                         </div>
                     </div>
                 </div>
