--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                     </div>
                 </div>
                 <div class="col-4 col-lg-2">
-                    <div class="card-general card-general-taken mb-3">
+                    <div class="card-general card-general-taken  mb-3">
                         <div class="p-2 text-center">
                             <svg class="mb-2" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M41.0385 44.1427C39.4491 44.1427 38.1606 42.8542 38.1606 41.2647V24.7836H34.3031V41.2647C34.3031 42.8542 33.0146 44.1427 31.4252 44.1427H31.3951C29.7973 44.1427 28.5021 45.4379 28.5021 47.0357C28.5021 47.5683 28.9338 48 29.4664 48H42.9671C43.4997 48 43.9315 47.5683 43.9315 47.0357C43.9315 45.4379 42.6363 44.1427 41.0385 44.1427Z" fill="#FFDE83"/>
@@ -722,7 +722,7 @@
                     </div>
                 </div>
                 <div class="col-4 col-lg-2">
-                    <div class="card-general  mb-3">
+                    <div class="card-general card-general-taken mb-3">
                         <div class="p-2 text-center">
                             <svg class="mb-2" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g clip-path="url(#clip0)">
@@ -760,7 +760,7 @@
                             </svg>
                             <h6 class="text-primary mb-1">Cochino</h6>
                             <div class="mb-1">20</div>
-                            <a class="badge badge-success" href="https://wa.me/584129408671?text=El%20n%C3%BAmero%2020%20animal%20%22Cochino%22">Disponible</a>
+                            <div>Carlos Landaeta</div>
                         </div>
                     </div>
                 </div>
