--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             </svg>
                             <h6 class="text-primary mb-1">Carnero</h6>
                             <div class="mb-1">01</div>
-                            <div>Tirso Matos</div>
+                            <div class="text-truncate text-center">Tirso Matos</div>
                         </div>
                     </div>
                 </div>
@@ -308,7 +308,7 @@
                             </svg>
                             <h6 class="text-primary mb-1">Rana</h6>
                             <div class="mb-1">06</div>
-                            <div>Renny Lecointere</div>
+                            <div class="text-truncate text-center">Renny Lecointere</div>
                         </div>
                     </div>
                 </div>
@@ -424,7 +424,7 @@
                             </svg>
                             <h6 class="text-primary mb-1">Tigre</h6>
                             <div class="mb-1">10</div>
-                            <div>Carlos Landaeta</div>
+                            <div class="text-truncate text-center">Carlos Landaeta</div>
                         </div>
                     </div>
                 </div>
@@ -613,7 +613,7 @@
                             </svg>
                             <h6 class="text-primary mb-1">Oso</h6>
                             <div class="mb-1">16</div>
-                            <div>Carlos Landaeta</div>
+                            <div class="text-truncate text-center">Carlos Landaeta</div>
                         </div>
                     </div>
                 </div>
@@ -760,7 +760,7 @@
                             </svg>
                             <h6 class="text-primary mb-1">Cochino</h6>
                             <div class="mb-1">20</div>
-                            <div>Carlos Landaeta</div>
+                            <div class="text-truncate text-center">Carlos Landaeta</div>
                         </div>
                     </div>
                 </div>
@@ -785,7 +785,7 @@
                             </svg>
                             <h6 class="text-primary mb-1">Gallo</h6>
                             <div class="mb-1">21</div>
-                            <div>Carlos Landaeta</div>
+                            <div class="text-truncate text-center">Carlos Landaeta</div>
                         </div>
                     </div>
                 </div>
@@ -870,7 +870,7 @@
                             </svg>
                             <h6 class="text-primary mb-1">Cebra</h6>
                             <div class="mb-1">23</div>
-                            <div>Carlos Landaeta</div>
+                            <div class="text-truncate text-center">Carlos Landaeta</div>
                         </div>
                     </div>
                 </div>
@@ -967,7 +967,7 @@
                             </svg>
                             <h6 class="text-primary mb-1">Vaca</h6>
                             <div class="mb-1">26</div>
-                            <div>Kevin Rivas</div>
+                            <div class="text-truncate text-center">Kevin Rivas</div>
                         </div>
                     </div>
                 </div>
@@ -1138,7 +1138,7 @@
                             </svg>
                             <h6 class="text-primary mb-1">Lapa</h6>
                             <div class="mb-1">31</div>
-                            <div>Gabriel Lecointere</div>
+                            <div class="text-truncate text-center">Gabriel Lecointere</div>
                         </div>
                     </div>
                 </div>
@@ -1183,7 +1183,7 @@
                             </svg>
                             <h6 class="text-primary mb-1">Ardilla</h6>
                             <div class="mb-1">32</div>
-                            <div class="text-truncate">Carlos Rondón</div>
+                            <div class="text-truncate text-center">Carlos Rondón</div>
                         </div>
                     </div>
                 </div>
@@ -1247,7 +1247,7 @@
                             </svg>
                             <h6 class="text-primary mb-1">Venado</h6>
                             <div class="mb-1">34</div>
-                            <div>Kevin Rivas</div>
+                            <div class="text-truncate text-center">Kevin Rivas</div>
                         </div>
                     </div>
                 </div>
