todos en disable

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="container">
             <div class="form-row">
                 <div class="col-4 col-lg-2">
-                    <div class="card-general mb-3">
+                    <div class="card-general card-general-taken mb-3">
                         <div class="p-2 text-center">
                             <svg class="mb-2" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M32.7098 18.395C29.2843 18.395 26.122 19.2344 23.5728 20.6522C20.4754 22.3089 14.8526 24.2114 13.4573 18.0931C14.7967 17.9092 16.2195 17.1917 17.5506 15.8607C20.3866 13.0247 22.0676 8.14558 20.095 6.17308C18.138 4.21605 13.3209 5.85611 10.4756 8.65174C7.63051 5.8562 2.81336 4.21614 0.856325 6.17317C-1.11618 8.14567 0.564857 13.0248 3.40089 15.8608C4.87445 17.3344 6.46051 18.0561 7.92133 18.1339C8.91883 33.2072 16.9951 41.1835 32.7099 41.1835C41.1544 41.1834 48 36.082 48 29.7892C48 23.4964 41.1544 18.395 32.7098 18.395Z" fill="#CDE9FA"/>
@@ -88,7 +88,7 @@
                             </svg>
                             <h6 class="text-primary mb-1">Ballena</h6>
                             <div class="mb-1">00</div>
-                            <a class="badge badge-success" href="https://wa.me/584129408671?text=El%20n%C3%BAmero%2000%20animal%20%22Ballena%22">Disponible</a>
+                            <div class="text-truncate">Sin comprador </div>
                         </div>
                     </div>
                 </div>
@@ -161,7 +161,7 @@
                     </div>
                 </div>
                 <div class="col-4 col-lg-2 ">
-                    <div class="card-general mb-3">
+                    <div class="card-general card-general-taken mb-3">
                         <div class="p-2 text-center">
                             <svg class="mb-2" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g clip-path="url(#clip0)">
@@ -208,7 +208,7 @@
                             </svg>
                             <h6 class="text-primary mb-1">Ciempiés</h6>
                             <div class="mb-1">03</div>
-                            <a class="badge badge-success" href="https://wa.me/584129408671?text=El%20n%C3%BAmero%2003%20animal%20%22Ciempi%C3%A9s%22">Disponible</a>
+                            <div class="text-truncate">Sin comprador</div>
                         </div>
                     </div>
                 </div>
@@ -618,7 +618,7 @@
                     </div>
                 </div>
                 <div class="col-4 col-lg-2">
-                    <div class="card-general mb-3">
+                    <div class="card-general card-general-taken mb-3">
                         <div class="p-2 text-center">
                             <svg class="mb-2"width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g clip-path="url(#clip0)">
@@ -652,7 +652,7 @@
                             </svg>
                             <h6 class="text-primary mb-1">Pavo</h6>
                             <div class="mb-1">17</div>
-                            <a class="badge badge-success" href="https://wa.me/584129408671?text=El%20n%C3%BAmero%2017%20animal%20%22pavo%22">Disponible</a>
+                            <div class="text-truncate">Sin comprador</div>
                         </div>
                     </div>
                 </div>
@@ -905,8 +905,8 @@
                     </div>
                 </div>
                 <div class="col-4 col-lg-2">
-                    <div class="card-general mb-3">
-                        <div class="p-2  text-center">
+                    <div class="card-general card-general-taken mb-3">
+                        <div class="p-2 text-center">
                             <svg class="mb-2" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g clip-path="url(#clip0)">
                                 <path d="M26.6289 10.4657C26.0912 7.06291 24.6898 3.74379 22.6828 1.11991C21.7257 -0.13184 19.935 -0.370152 18.6838 0.587035C17.5976 1.41775 17.2745 2.87632 17.8341 4.06535C17.8802 4.16332 17.7675 4.25932 17.6781 4.19838C16.2874 3.25141 14.8001 2.47722 13.2792 1.92213C11.8048 1.384 10.0998 2.10063 9.54884 3.57016C8.98897 5.0635 9.76062 6.72138 11.2568 7.25782C11.4957 7.3435 11.7337 7.43697 11.9702 7.53785C12.1552 7.61679 12.0717 7.89466 11.8737 7.85894C11.0495 7.70997 10.2243 7.61379 9.40747 7.57385C7.83528 7.49641 6.49578 8.71029 6.41881 10.2837C6.34184 11.8574 7.55516 13.1955 9.12875 13.2723C11.4973 13.3882 13.9852 14.1696 16.1338 15.4725C18.0877 16.6574 19.2597 17.9957 19.5546 18.7963C19.9793 19.9498 21.0705 20.6642 22.2319 20.6642C22.5593 20.6642 22.8923 20.6073 23.2172 20.4876C23.3274 20.447 23.433 20.3997 23.5349 20.3475C24.3834 20.2295 25.1697 19.7328 25.6252 18.9303C26.7892 16.88 27.1549 13.7947 26.6289 10.4657Z" fill="#F27281"/>
@@ -932,7 +932,7 @@
                             </svg>
                             <h6 class="text-primary mb-1">Gallina</h6>
                             <div class="mb-1">25</div>
-                            <a class="badge badge-success" href="https://wa.me/584129408671?text=El%20n%C3%BAmero%2025%20animal%20%22Gallina%22">Disponible</a>
+                            <div class="text-truncate">Sin comprador</div>
                         </div>
                     </div>
                 </div>
@@ -1188,7 +1188,7 @@
                     </div>
                 </div>
                 <div class="col-4 col-lg-2">
-                    <div class="card-general mb-3">
+                    <div class="card-general card-general-taken mb-3">
                         <div class="p-2 text-center">
                             <svg class="mb-2" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M33.0194 9.28369L28.8064 12.3431L27.2097 23.9999L29.1897 35.5928L33.0195 38.7161C34.519 38.4881 35.9704 38.1203 37.3405 37.62V10.3798C35.9703 9.87966 34.5188 9.51169 33.0194 9.28369Z" fill="#EFEDEE"/>
@@ -1213,7 +1213,7 @@
                             </svg>
                             <h6 class="text-primary mb-1">Pescado</h6>
                             <div class="mb-1">33</div>
-                            <a class="badge badge-success" href="https://wa.me/584129408671?text=El%20n%C3%BAmero%2033%20animal%20%22Pescado%22">Disponible</a>
+                            <div class="text-truncate">Sin comprador</div>
                         </div>
                     </div>
                 </div>
