--- a/index.html
+++ b/index.html
@@ -619,8 +619,7 @@
                     </div>
                 </div>
                 <div class="col-4 col-lg-2">
-                    <h5 class="text-center">¡Ganador!</h5>
-                    <div class="card-general card-success mb-3">
+                    <div class="card-general card-general-taken mb-3">
                         <div class="p-2 text-center">
                             <svg class="mb-2"width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g clip-path="url(#clip0)">
